--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ app-root {
     height: 75px;
     text-align: center;
     border: 1px solid var(--green);
-    background-color: pink;
+    background-color: black;
 }
 
 /* global styling for the paragraph headings on each page*/
